# unintelligent

./: .gitignore  README.md  pyproject.toml
src/unintelligent/ai/: __init__.py  metrics.py  pytorch.py  types.py
src/unintelligent/ai/cnns/: __init__.py  sizes.py
src/unintelligent/ai/transformers/: __init__.py  sequence_classification.py
src/unintelligent/bio/: __init__.py  gene.py  human.py  protein.py  stats.py  types.py
src/unintelligent/gpu/: __init__.py  nvidia.py
src/unintelligent/ml/: split.py
src/unintelligent/utils/: iterators.py
