[tool.poetry]
name = "unintelligent"
version = "0.1.0"
description = "Toolbox with not-so-smart tools that I bring to work"
authors = ["Krzysztof J. Czarnecki <kjczarne@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "unintelligent", from="src"}]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.25.2"
jax = "^0.4.14"
biopython = "^1.81"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.21.1"
pylint = "^2.17.5"
pytest = "^7.4.0"
Sphinx = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
