[tool.poetry]
name = "unintelligent"
version = "0.1.0"
description = "Toolbox with not-so-smart tools that I bring to work"
authors = ["Krzysztof J. Czarnecki <kjczarne@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "unintelligent", from="src"}]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.25.2"
jax = "^0.4.14"
biopython = "^1.81"
scikit-learn = "^1.3.0"
orffinder = "^1.8"
prettyprint = "^0.1.5"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.21.1"
pylint = "^2.17.5"
pytest = "^7.4.0"
Sphinx = "^7.1.2"

[tool.pylint.messages_control]
max-line-length = 110
disable = [
    "import-error",      # annoying and doesn't work in VSCode as it should
    "use-dict-literal",  # shut up, will you? I like my `dict()`
]

[tool.poe.tasks.install-pytorch]
control.expr = "flavor"
args = ["flavor"]

    [[tool.poe.tasks.install-pytorch.switch]]
    case = "cuda"
    cmd = "pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu"

    [[tool.poe.tasks.install-pytorch.switch]]
    case = "no-cuda"
    cmd = "pip3 install torch torchvision torchaudio"

[tool.poe.tasks]
install-huggingface = "pip3 install transformers tokenizers datasets evaluate accelerate"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
